--- a/static/houseOfCards/hoc.html
+++ b/static/houseOfCards/hoc.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+	<style>
+		@media (max-width: 992px){
+			body{
+				background-color: green;
+		  	}
+		}
+	</style>
 	<SCRIPT TYPE="text/javascript"> 
 	<!-- // copyright 1999 Idocs, Inc. http://www.idocs.com // Distribute this script freely but keep this notice in place 
 	function numbersonly(myfield, e, dec) {
